--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,11 @@
             <a href="where.html" class="nav-item nav-link">Hours and Location</a>
             <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
           </nav>
-          <main class="col border-left border-dark"></main>
+          <main class="col border-left border-dark">
+            <h2> How to Contact Us </h2>
+            <h4> Phone: (315) 379-2202
+            <h4> Fax: (315) 386-2737
+            <h4> <a href="https://www.facebook.com/SLCBoardOfElections/">Facebook Page: SLCBoardOfElections</h4>
+          </main>
   </body>
 </html>
