--- a/where.html
+++ b/where.html
@@ -23,7 +23,11 @@
             <a href="contact.html" class="nav-item nav-link ">Contact Us</a>
           </nav>
           <main class="col border-left border-dark">
-            <h4> Our Regular Office Hours are as follows: </h4>
+            <h2> Where are We Located </h2>
+            <p> We are located inside of the County Courthouse. The address is: </p>
+            <p class="ml-4">48 Court Street</p>
+            <p class="ml-4">Canton, New York 13617</p>
+            <h4 class="mt-4"> Our Regular Office Hours are as Follows: </h4>
             <p> Monday: 9AM to 5PM </p>
             <p> Tuesday: 9AM to 5PM </p>
             <p> Wednesday: 9AM to 5PM </p>
@@ -32,6 +36,7 @@
             <p> Saturday: Closed </p>
             <p> Monday: Closed </p>
           </main>
+
 
   </body>
 </html>
